--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use></svg
-          >Search
+            <use xlink:href="images/sprite.svg#search"></use>
+          </svg>
+          Search
         </button>
       </div>
       <ul class="list block-domain__prices">
@@ -373,8 +374,8 @@
                     </svg>
                   </div>
                   <div class="media__body">
-                    <h3 class="media__title quote__author">John Smith</h3>
-                    <p class="quote__organization">ABC Company</p>
+                    <h3 class="media__title quote__author">Ahmad Bilal</h3>
+                    <p class="quote__organization">Elysium Sols</p>
                   </div>
                 </div>
               </footer>
